--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="app_bar_height">300dp</dimen>
     <dimen name="appMargin">10dp</dimen>
     <dimen name="animation_margin">16dp</dimen>
+    <dimen name="shuffle_margin">16dp</dimen>
 </resources>
