--- a/app/src/main/res/layout/fragment_motion.xml
+++ b/app/src/main/res/layout/fragment_motion.xml
@@ -8,42 +8,42 @@
     app:layoutDescription="@xml/fragment_motion_scene">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline1"
+        android:id="@+id/guidelinefirstvertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.25"/>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline2"
+        android:id="@+id/guidelinesecondvertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5"/>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
+        android:id="@+id/guidelinethirdvertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.75"/>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
+        android:id="@+id/guidelinefirsthorizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.25"/>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline5"
+        android:id="@+id/guidelinesecondhorizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5"/>
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline6"
+        android:id="@+id/guidelinethirdhorizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -54,30 +54,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"
-        app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintEnd_toEndOf="@id/guideline1"
-        app:layout_constraintTop_toTopOf="@id/guideline4"
-        app:layout_constraintBottom_toBottomOf="@id/guideline4"/>
+        app:layout_constraintStart_toStartOf="@id/guidelinefirstvertical"
+        app:layout_constraintEnd_toEndOf="@id/guidelinefirstvertical"
+        app:layout_constraintTop_toTopOf="@id/guidelinefirsthorizontal"
+        app:layout_constraintBottom_toBottomOf="@id/guidelinefirsthorizontal"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2"
-        app:layout_constraintStart_toStartOf="@id/guideline2"
-        app:layout_constraintEnd_toEndOf="@id/guideline2"
-        app:layout_constraintTop_toTopOf="@id/guideline5"
-        app:layout_constraintBottom_toBottomOf="@id/guideline5"/>
+        app:layout_constraintStart_toStartOf="@id/guidelinesecondvertical"
+        app:layout_constraintEnd_toEndOf="@id/guidelinesecondvertical"
+        app:layout_constraintTop_toTopOf="@id/guidelinesecondhorizontal"
+        app:layout_constraintBottom_toBottomOf="@id/guidelinesecondhorizontal"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="3"
-        app:layout_constraintStart_toStartOf="@id/guideline3"
-        app:layout_constraintEnd_toEndOf="@id/guideline3"
-        app:layout_constraintTop_toTopOf="@id/guideline6"
-        app:layout_constraintBottom_toBottomOf="@id/guideline6"/>
+        app:layout_constraintStart_toStartOf="@id/guidelinethirdvertical"
+        app:layout_constraintEnd_toEndOf="@id/guidelinethirdvertical"
+        app:layout_constraintTop_toTopOf="@id/guidelinethirdhorizontal"
+        app:layout_constraintBottom_toBottomOf="@id/guidelinethirdhorizontal"/>
 
 
 
