--- a/app/src/main/res/layout/fragment_picture_of_the_day.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day.xml
@@ -55,7 +55,7 @@
                 android:id="@+id/inputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:hint="@string/hint"
                 android:padding="@dimen/padding_5dp"
                 app:counterEnabled="true"
@@ -75,7 +75,7 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.geekbrain.android.nasa_api.utils.SquareImageView
+            <com.geekbrain.android.nasa_api.view.picture.utils.SquareImageView
                 android:id="@+id/pictureOfTheDayImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -116,7 +116,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:visibility="gone"
+        android:visibility="visible"
         app:hideOnScroll="true"
         app:layout_scrollFlags="scroll|enterAlways"
         app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />
@@ -125,7 +125,7 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:visibility="visible"
         android:contentDescription="@string/picture_of_the_day"
         app:layout_anchor="@id/bottomAppBar"
         app:srcCompat="@drawable/ic_plus_fab" />
