--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -15,12 +15,12 @@
 
     <item
         android:id="@+id/action_layout"
-        android:icon="@drawable/ic_system"
-        android:title = "@string/layout" />
+        android:icon="@drawable/ic_baseline_animation_24"
+        android:title = "@string/animation" />
 
     <item
         android:id="@+id/action_motion"
-        android:icon="@drawable/ic_system"
+        android:icon="@drawable/ic_baseline_auto_awesome_motion_24"
         android:title = "@string/motion" />
 
 </menu>
