--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,10 +3,8 @@
     <style name="Base.Theme.Nasa_api" parent="Theme.Material3.DynamicColors.DayNight">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-
+        <!--  <item name="windowActionBar">false</item>
+              <item name="windowNoTitle">true</item>-->
 
 <!--        <item name="myColor">@color/my_color</item>
         <item name="myColor2">#FF0101</item>-->
