--- a/app/src/main/res/xml/fragment_motion_scene.xml
+++ b/app/src/main/res/xml/fragment_motion_scene.xml
@@ -8,30 +8,64 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
-            app:layout_constraintStart_toStartOf="@id/guideline1"
-            app:layout_constraintEnd_toEndOf="@id/guideline1"
-            app:layout_constraintTop_toTopOf="@id/guideline4"
-            app:layout_constraintBottom_toBottomOf="@id/guideline4"/>
+            app:layout_constraintStart_toStartOf="@id/guidelinefirstvertical"
+            app:layout_constraintEnd_toEndOf="@id/guidelinefirstvertical"
+            app:layout_constraintTop_toTopOf="@id/guidelinefirsthorizontal"
+            app:layout_constraintBottom_toBottomOf="@id/guidelinefirsthorizontal"/>
 
         <Constraint
             android:id="@+id/btn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2"
-            app:layout_constraintStart_toStartOf="@id/guideline2"
-            app:layout_constraintEnd_toEndOf="@id/guideline2"
-            app:layout_constraintTop_toTopOf="@id/guideline5"
-            app:layout_constraintBottom_toBottomOf="@id/guideline5"/>
+            app:layout_constraintStart_toStartOf="@id/guidelinesecondvertical"
+            app:layout_constraintEnd_toEndOf="@id/guidelinesecondvertical"
+            app:layout_constraintTop_toTopOf="@id/guidelinesecondhorizontal"
+            app:layout_constraintBottom_toBottomOf="@id/guidelinesecondhorizontal"/>
 
         <Constraint
             android:id="@+id/btn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3"
-            app:layout_constraintStart_toStartOf="@id/guideline3"
-            app:layout_constraintEnd_toEndOf="@id/guideline3"
-            app:layout_constraintTop_toTopOf="@id/guideline6"
-            app:layout_constraintBottom_toBottomOf="@id/guideline6"/>
+            app:layout_constraintStart_toStartOf="@id/guidelinethirdvertical"
+            app:layout_constraintEnd_toEndOf="@id/guidelinethirdvertical"
+            app:layout_constraintTop_toTopOf="@id/guidelinethirdhorizontal"
+            app:layout_constraintBottom_toBottomOf="@id/guidelinethirdhorizontal"/>
+    </ConstraintSet>
+
+    <ConstraintSet android:id="@+id/mid">
+        <Constraint
+            android:id="@+id/btn1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1"
+            app:layout_constraintStart_toStartOf="@id/guidelinesecondvertical"
+            app:layout_constraintEnd_toEndOf="@id/guidelinesecondvertical"
+            app:layout_constraintTop_toTopOf="@id/guidelinesecondhorizontal"
+            app:layout_constraintBottom_toBottomOf="@id/guidelinesecondhorizontal"
+            />
+
+        <Constraint
+            android:id="@+id/btn2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2"
+            app:layout_constraintStart_toStartOf="@id/guidelinethirdvertical"
+            app:layout_constraintEnd_toEndOf="@id/guidelinethirdvertical"
+            app:layout_constraintTop_toTopOf="@id/guidelinesecondhorizontal"
+            app:layout_constraintBottom_toBottomOf="@id/guidelinesecondhorizontal"/>
+
+        <Constraint
+            android:id="@+id/btn3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3"
+            app:layout_constraintStart_toStartOf="@id/guidelinethirdvertical"
+            app:layout_constraintEnd_toEndOf="@id/guidelinethirdvertical"
+            app:layout_constraintTop_toTopOf="@id/guidelinefirsthorizontal"
+            app:layout_constraintBottom_toBottomOf="@id/guidelinefirsthorizontal"/>
+        />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -40,37 +74,46 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
-            app:layout_constraintStart_toStartOf="@id/guideline1"
-            app:layout_constraintEnd_toEndOf="@id/guideline1"
-            app:layout_constraintTop_toTopOf="@id/guideline6"
-            app:layout_constraintBottom_toBottomOf="@id/guideline6"/>
+            app:layout_constraintStart_toStartOf="@id/guidelinefirstvertical"
+            app:layout_constraintEnd_toEndOf="@id/guidelinefirstvertical"
+            app:layout_constraintTop_toTopOf="@id/guidelinethirdhorizontal"
+            app:layout_constraintBottom_toBottomOf="@id/guidelinethirdhorizontal"
+           />
 
         <Constraint
             android:id="@+id/btn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2"
-            app:layout_constraintStart_toStartOf="@id/guideline3"
-            app:layout_constraintEnd_toEndOf="@id/guideline3"
-            app:layout_constraintTop_toTopOf="@id/guideline5"
-            app:layout_constraintBottom_toBottomOf="@id/guideline5"/>
+            app:layout_constraintStart_toStartOf="@id/guidelinethirdvertical"
+            app:layout_constraintEnd_toEndOf="@id/guidelinethirdvertical"
+            app:layout_constraintTop_toTopOf="@id/guidelinesecondhorizontal"
+            app:layout_constraintBottom_toBottomOf="@id/guidelinesecondhorizontal"/>
 
         <Constraint
             android:id="@+id/btn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3"
-            app:layout_constraintStart_toStartOf="@id/guideline3"
-            app:layout_constraintEnd_toEndOf="@id/guideline3"
-            app:layout_constraintTop_toTopOf="@id/guideline4"
-            app:layout_constraintBottom_toBottomOf="@id/guideline4"/>
+            app:layout_constraintStart_toStartOf="@id/guidelinethirdvertical"
+            app:layout_constraintEnd_toEndOf="@id/guidelinethirdvertical"
+            app:layout_constraintTop_toTopOf="@id/guidelinefirsthorizontal"
+            app:layout_constraintBottom_toBottomOf="@id/guidelinefirsthorizontal"/>
+       />
     </ConstraintSet>
 
     <Transition
-        app:constraintSetEnd="@+id/end"
         app:constraintSetStart="@+id/start"
+        app:constraintSetEnd="@+id/mid"
         app:duration="2000">
         <OnClick app:targetId="@+id/btn1"/>
+    </Transition>
+
+    <Transition
+        app:constraintSetStart="@+id/mid"
+        app:constraintSetEnd="@+id/end"
+        app:duration="2000">
+        <OnClick app:targetId="@+id/btn2"/>
     </Transition>
 
 </MotionScene>
