--- a/app/src/main/res/layout/recycler_item_earth.xml
+++ b/app/src/main/res/layout/recycler_item_earth.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    >
+    android:background="@android:color/white">
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/earthImageView"
         android:layout_width="80dp"
@@ -13,9 +12,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bg_earth"
-        />
+        app:srcCompat="@drawable/bg_earth" />
+
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/earth_item"
@@ -23,8 +23,8 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/earthImageView"
         app:layout_constraintEnd_toStartOf="@+id/earthImageView"
-        app:layout_constraintTop_toTopOf="@+id/earthImageView"
-        />
+        app:layout_constraintTop_toTopOf="@+id/earthImageView" />
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/wikiImageView"
         android:layout_width="wrap_content"
@@ -32,32 +32,31 @@
         android:layout_margin="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_wikipedia"
-        />
+        app:srcCompat="@drawable/ic_wikipedia" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/descriptionTextView"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:text="@string/additional_text"
-    android:textColor="#000"
-    android:textSize="15sp"
-    app:layout_constraintBottom_toBottomOf="@+id/earthImageView"
-    app:layout_constraintEnd_toStartOf="@+id/barrier"
-    app:layout_constraintStart_toEndOf="@+id/earthImageView"
-    app:layout_constraintTop_toTopOf="@+id/earthImageView"
-    />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/additional_text"
+        android:textColor="#000"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="@+id/earthImageView"
+        app:layout_constraintEnd_toStartOf="@+id/barrier"
+        app:layout_constraintStart_toEndOf="@+id/earthImageView"
+        app:layout_constraintTop_toTopOf="@+id/earthImageView" />
+
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="end"
-        app:constraint_referenced_ids="wikiImageView"
-        />
+        app:constraint_referenced_ids="wikiImageView" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="#000"
         app:layout_constraintBottom_toBottomOf="@+id/earthImageView"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
