--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,17 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_gray">#668E8A8A</color>
     <color name="my_color">#2E468E</color>
+    <color name="red">#FF5722</color>
+    <color name="orange">#FF9800</color>
+    <color name="yellow">#FFEB3B</color>
+    <color name="green">#A8EA5D</color>
+    <color name="lightblue">#00BCD4</color>
+    <color name="blue">#03A9F4</color>
+    <color name="purple">#9C27B0</color>
+
+
     <color name="mars_seed">#c700e0</color>
+
 
     <color name="mars_theme_light_primary">#F44336</color>
     <color name="mars_theme_light_onPrimary">#FFFFFF</color>
